@@ -5,7 +5,7 @@ use lib qw(/usr/pack/rrdtool-1.0.33-to/lib/perl);
 use lib qw(/home/oetiker/data/projects/AADJ-smokeping/dist/lib);
 use CGI::Carp qw(fatalsToBrowser);
 
-use Smokeping 20051006;
+use Smokeping 20051007;
 
 Smokeping::cgi("/home/oetiker/data/projects/AADJ-smokeping/dist/etc/config");
 
