@@ -1,3 +1,5 @@
+2005/10/7 -- released version 20051007_trunk
+
 2005/10/6 -- released version 20051006_trunk
 
 2005/10/5 -- released version 20051005_trunk
